Fixed background color overflow and link hover color

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -30,9 +30,12 @@ img.center {
     padding: 0;
   }
 
-  /* --- Welcome Page Styles --- */
+  section {
+    min-height: 100vh;
+  }
+
   body {
-    background-color: rgb(48, 55, 58);
+    background-color: rgb(33, 34, 34);
     color: rgb(224, 213, 213);
     font-family: sans-serif;
     line-height: 18px;
@@ -59,6 +62,10 @@ img.center {
   p {
     color: rgb(224, 213, 213);
     margin-bottom: 18px;
+  }
+
+  a:hover {
+    color: white;
   }
 
   .content {
